# litchi

./: .clang-format  CMakeLists.txt
litchi/: litchi.h  node.h
litchi/activations/: activation_layer.h  relu_layer.h  sigmoid_layer.h
litchi/core/: backend.h
litchi/core/framework/: op_kernel.h
litchi/core/kernels/: fully_connected_op.h  fully_connected_op_internal.h
litchi/core/params/: fully_params.h  params.h
litchi/layers/: fully_connected_layer.h  layer.h
litchi/util/: gradient_check.h  macro.h  product.h  random.h  util.h  weight_init.h
test/: CMakeLists.txt  test.cc  test_activation_layer.h  test_fully_connected_layer.h  test_node.h  testhelper.h
